--- a/ex002.html
+++ b/ex002.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabelas</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        table{
+            width: 500px;
+            border-collapse: collapse;
+        }
+        td, th{
+            border: 1px solid black;
+            padding: 10px;
+        }
+        thead{
+            background-color: grey;
+            color: white;
+        }
+        td.num{
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
+    <h1>Uso de tabelas grandes</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Estado</th>
+                <th>População</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.000.123</td>
+            </tr>
+            <tr>
+                <td>Minas Gerais</td>
+                <td class="num">12.302.123</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">5.016.600</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">23.000.012</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">9.002.123</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>Total de Habitantes</th>
+                <td class="num"><strong>000000</strong></td>
+            </tr>
+        </tfoot>
+    </table>
     
 </body>
 </html>
