--- a/ex002.html
+++ b/ex002.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
     <style>
-        body{
+        body {
             font-family: Arial, Helvetica, sans-serif;
         }
-        table{
+
+        table {
             width: 500px;
             border-collapse: collapse;
         }
-        td, th{
+
+        caption{
+            font-size: 1.3em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgrey;
+        }
+        /*pseudoclasse pula uma linha nth-child(2n)*/
+        tbody >tr:nth-child(2n){
+            background-color: lightskyblue;
+        }
+
+
+        td, th {
             border: 1px solid black;
             padding: 10px;
         }
-        thead{
+
+        thead {
             background-color: grey;
             color: white;
         }
-        td.num{
+
+        td.num {
             text-align: right;
         }
     </style>
 </head>
+<!-- HIERARQUIA DE TABELAS (simples)
+        TABLE = tabela
+        TABLE ROW = linha de tabela
+        TABLE HEADER = cabeçalho de tabela
+         TABLE DATA = dado de tabela -->
+
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -59,11 +83,12 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td class="num"><strong>000000</strong></td>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>210.100.000</strong></td>
             </tr>
         </tfoot>
     </table>
-    
+
 </body>
+
 </html>
