--- a/ex003.html
+++ b/ex003.html
@@ -25,11 +25,11 @@
 <table>
     <tr>
         <td>A</td>
-        <td colspan="2">B</td>
+        <td colspan="2">B</td><!--colunas-->
         
     </tr>
     <tr>
-        <td rowspan="3">D</td>
+        <td rowspan="3">D</td>><!--linhas-->
         <td>E</td>
         <td rowspan="2">F</td>
     </tr>
@@ -37,8 +37,8 @@
         <td>H</td>
     </tr>
     <tr>
-        <td>L</td>
-        <td>M</td>
+        <td colspan="2">L</td>
+        
     </tr>
 </table>    
 </body>
